InGress Networking/Ingress-Controller.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ingress-controller
  namespace: ingress-space
spec:
  replicas: 1
  selector:
    matchLabels:
      name: nginx-ingress
  template:
    metadata:
        labels:
          name: nginx-ingress
    spec:
      serviceAccount: ingress-serviceaccount
      containers:
        - name: nginx-ingress-controller
          image: quay.io/kubernetes-ingress-controller/nginx-nginx-controller:0.21.0
          args:
            - /nginx-ingress-controller
            - --configmap= $(POD_NAMESPACE)/nginx-configuration
            - default-backend-service=app-space/default-http-backend
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
