InGress Networking/Ingress-wear.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: Ingress-wear
spec:
  backend:
      serviceName: wear-service
      servicePort: 80
