InGress Networking/Rewrite-target.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-Ingress
  namespace: critical-space
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /pay
            backend:
              serviceName: pay-service
              servicePort: 8282
